src/snapshots/bitcut__tests__add_at_end_copy_at_start.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        0,
        15,
    ),
    Add(
        Text("YYY"),
    ),
]
