src/snapshots/bitcut__tests__add_at_start_copy_after_window.snap
---
source: src/lib.rs
expression: ops
---
[
    Add(
        Text("ZZZ"),
    ),
    Copy(
        0,
        15,
    ),
]
