src/snapshots/bitcut__tests__add_at_window_boundary.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        0,
        15,
    ),
    Add(
        Text("X"),
    ),
    Copy(
        0,
        10,
    ),
]
