src/snapshots/bitcut__tests__deletion_inside_long_block.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        0,
        12,
    ),
    Copy(
        13,
        12,
    ),
]
