src/snapshots/bitcut__tests__empty_to_long.snap
---
source: src/lib.rs
expression: ops
---
[
    Add(
        Text("\u{1}\u{2}\u{3}\u{4}\u{5}\u{6}\u{7}\u{8}"),
    ),
]
