src/snapshots/bitcut__tests__insertion_inside_long_block.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        0,
        12,
    ),
    Add(
        Text("X"),
    ),
    Copy(
        12,
        13,
    ),
]
