src/snapshots/bitcut__tests__oob_copy.snap
---
source: src/lib.rs
expression: err
---
CopyOutOfBounds {
    offset: 0,
    len: 100,
    old_len: 5,
}
