src/snapshots/bitcut__tests__op_iter_stops_after_error.snap
---
source: src/lib.rs
expression: collected
---
[
    Ok(
        Add(
            Text("hi"),
        ),
    ),
    Err(
        InvalidOpcode(
            238,
        ),
    ),
]
