src/snapshots/bitcut__tests__reorder_no_add.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        10,
        13,
    ),
    Copy(
        0,
        10,
    ),
]
