src/snapshots/bitcut__tests__reorder_with_add.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        10,
        11,
    ),
    Copy(
        0,
        10,
    ),
    Add(
        Text("baz"),
    ),
]
