src/snapshots/bitcut__tests__replacement_inside_long_block.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        0,
        12,
    ),
    Add(
        Text("Z"),
    ),
    Copy(
        13,
        12,
    ),
]
