src/snapshots/bitcut__tests__shifted_digits.snap
---
source: src/lib.rs
expression: ops
---
[
    Copy(
        2,
        98,
    ),
    Add(
        Text("\0\u{1}"),
    ),
]
